# sea-lantern

./: .dockerignore  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: main.yml  publish.yml  rust.yml
api/crd/: minecraft_server_crd.yaml  minecraft_server_version_crd.yaml
api/proto/backup/: backup.proto
api/proto/management/: management.proto
docs/: architecture.md
package/: controller.Dockerfile  eula-writer.Dockerfile  management-api.Dockerfile  server-properties-updater.Dockerfile
src/: lib.rs  rcon.rs
