[package]
name = "sea_lantern"
version = "0.1.0"
authors = ["James Laverack <james@jameslaverack.com>"]
edition = "2018"

[[bin]]
name = "management_api"
path = "src/bin/management_api.rs"

[dependencies]
clap = "2.33.0"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1"
prost = "0.6"
log = "0.4.8"
pretty_env_logger = "0.4.0"
regex = "1.3.6"
rcon = "0.2.1"

[build-dependencies]
tonic-build = "0.1.0"
