[package]
name = "sea-lantern"
version = "0.1.0"
authors = ["James Laverack <james@jameslaverack.com>"]
edition = "2018"

[[bin]]
name = "management_api"
path = "src/bin/management_api.rs"

[[bin]]
name = "eula_writer"
path = "src/bin/eula_writer.rs"

[[bin]]
name = "server_properties_updater"
path = "src/bin/server_properties_updater.rs"

[dependencies]
clap = "2.33.0"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1"
prost = "0.6"
log = "0.4.8"
pretty_env_logger = "0.4.0"
regex = "1.3.6"
rcon = "0.2.1"
rust-ini = "0.15.2"
kube = "0.32.1"
kube-derive = "0.32.1"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_16"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_yaml = "0.8.11"
anyhow = "1.0.28"

[build-dependencies]
tonic-build = "0.1.0"
